--- a/aquarios.html
+++ b/aquarios.html
@@ -17,7 +17,7 @@
 		    <nav>
 		      <ul class="links">
 		        <li><a href="index.html">Home</a></li>
-		        <li><a href="aquarios.html">Aquários</a></li>
+		        <li><a href="computadores.html">computador</a></li>
 		        <li><a href="peixes.html">Peixes</a></li>
 		        <li><a href="crustaceos.html">Crustáceos</a></li>
 		        <li><a href="plantas.html">Plantas Aquáticas</a></li>
@@ -31,7 +31,7 @@
 		<h1>Aquários incríveis</h1>
 
 		<h2>Aquário plantado</h2>
-		<img id="sizeimg" src="aquarios/aq1.jpg">
+		<img id="sizeimg" src="i/aq1.jpg">
 
 		<h2>Aquário Amazônico</h2>
 		<img id="sizeimg" src="aquarios/aq2.jpg">
