--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <div>
 	<main>
 
-		<h1>Mais que um simples hobby.</h1>
+		<h1>compras online de eletronicos</h1>
 		
-		<p>O meio aquático também exerce importante papel de educação, conservação e pesquisa. Os aquários vêm sendo usados como ferramenta para sensibilizar as pessoas, mantê-las calmas, em estado de alívio e distração, principalmente hoje, em tempos de pandemia. Também podem motivar alunos durante o processo de ensino e aprendizagem, aumentando seu conhecimento e contribuindo para a dinâmica de ambientes com as ações humanas – existem, inclusive, dezenas de estudos que comprovam os benefícios dos aquários para a educação. </p>
+		<p> aqui voce oncontra os melhores produtos com um menor preço super rapido e facil. </p>
 
-		<p>	Diversos trabalhos científicos também podem ser realizados em aquários com objetivos dos mais variados ou simplesmente para conhecer melhor as espécies aquáticas, entre as quais há muitas que estão sendo reproduzidas em cativeiro, onde, graças à aquariofilia (criação de animais em aquários), muitas espécies foram salvas da extinção.</p>
+		<p> tudo o que voce precisa bem na sua mao e so escolher o que voce procura.</p>
 
-		<p>	Os recifes de corais enfrentam desafios crescentes, incluindo a acidificação dos oceanos, o aumento  da temperatura da água, a poluição e a exploração excessiva. A apresentação de habitats e habitantes de recifes de corais é importante para a educação pública sobre esses desafios.</p>
+		<p>	 desde eletronicos a peças, sensores e muito mais. </p>
 		
 	</main>
 	</div>
