--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 		
 		<p> aqui voce oncontra os melhores produtos com um menor preço super rapido e facil. </p>
 
-		<p> tudo o que voce precisa bem na sua mao e so escolher o que voce procura.</p>
+		<p> tudo o que voce precisa bem na sua mao é só escolher o que voce procura.</p>
 
 		<p>	 desde eletronicos a peças, sensores e muito mais. </p>
 		
 	</main>
 	</div>
 	<footer class="footer">	
-		<p>Este site está sendo desenvolvido com o intuito de aprendizagem de programação em <span>HTML5 e CSS3</span>, e com a pretensão de continuação do projeto voltado para o aquarismo.</p>		
-		<p>&copy Copyright Evaldo D. R. Schmidt.</p>
+		<p>projeto voltado para as vendas</p>		
+		<p>...</p>
 	</footer>
 </body>
 	
