--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		    <nav>
 		      <ul class="links">
 		       <li><a href="index.html">Home</a></li>
-		        <li><a href="aquarios.html">Aquários</a></li>
-		        <li><a href="peixes.html">Peixes</a></li>
-		        <li><a href="crustaceos.html">Crustáceos</a></li>
+		        <li><a href="aquarios.html">eletronicos</a></li>
+		        <li><a href="peixes.html">Peças</a></li>
+		        <li><a href="crustaceos.html"></a></li>
 		        <li><a href="plantas.html">Plantas Aquáticas</a></li>
 		      </ul>
 		    </nav> 
